# Learning-Diary

./: .gitignore  CMake.py  DayUpdate.py  README.md
Doc/: DayTODO.md  LearnByHeart.md  SizeOfPaper.md  ToRead.md
Doc/Haskell/: 2022.03.13.hs  2022.03.16.hs  2022.03.19.hs
Doc/data/: chinese.yaml  english.yaml
Doc/remember/chinese/: optional_compulsory.yaml
Doc/remember/english/: SHigh.OC.3.yaml
Doc/tools/: Misc.md  Remember-Helper.md
History/2022/: 2022 Calendar.md  2022-Calendar.md
History/2022/02/: 21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md
History/2022/03/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md
History/2022/04/: 01.md  02.md  03.md  05.md  08.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  24.md  25.md  26.md  27.md  28.md  30.md
History/2022/05/: 01.md  02.md  03.md  14.md
History/Essay/: 2022-03-14.md
History/The theory of study/: 序与第一章.docx
Libs/: day_todo.md
Libs/MSVC/: yaml-cpp.exp  yaml-cpp.lib
Resources/: day_todo.md
Resources/remember/chinese/: optional_compulsory.yaml
Resources/remember/english/: Misc.yaml  SHigh.OC.3.yaml
Subject/Biology/Material/: Reference.md
Subject/Biology/Notepad/: 第一章 细胞生物学基础.md
Subject/Chemistry/Remembered/: 结构式.md
Subject/Chinese/Handout/: Title of writng.html  (+1 more)
Subject/English/: [英语报] 2021.06.20.docx
Tools/: CMakeLists.txt  Remember-Helper.yaml
Tools/Remember-Helper/: CMakeLists.txt
Tools/Remember-Helper/include/: Context.hpp  HTTP.h  MP3.hpp  context.hpp  path.h  push_system.hpp  wintoastlib.h
Tools/Remember-Helper/src/: context.cpp  http_and_mp3.cpp  main.cpp  path.cpp  push_system_cli.cpp  push_system_toast.cpp  wintoastlib.cpp
Tools/Word-Helper/: CMakeLists.txt
doc/: DayTODO.md  LearnByHeart.md  SizeOfPaper.md  ToRead.md
doc/tools/: Misc.md  Word-Helper.md
libs/: day_todo.md
(+106 files in other folders)
